# IDAGIO-Downloader-Rust-ver

./: Cargo.toml  README.md  config.json
src/: main.rs  structs.rs  utils.rs
src/api/: client.rs  structs.rs
